--- a/Entregas/challenge-4-websocket-handlebars/package.json
+++ b/Entregas/challenge-4-websocket-handlebars/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "./src/app.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
+    "start:dev": "nodemon ./src/app.js",
     "start": "node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.2",
+    "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
