--- a/Entregas/Challenge-5-login/package.json
+++ b/Entregas/Challenge-5-login/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.6.1",
-    "sweetalert2": "^11.7.3"
+    "sweetalert2": "^11.7.3",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
