--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start:dev": "nodemon ./src/app.js",
-    "start": "node ./src/app.js",
+    "start": "node ./src/app.js -e production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "commander": "^11.0.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -29,7 +30,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
-    "sweetalert2": "^11.4.8"
+    "sweetalert2": "^11.4.8",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
