actualizo .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,28 @@ DB_NAME = ""
 DB_PASSWORD = ""
 DB_URL = ""
 
-# Server
-PORT = PORT
-
-# Session
-SESSION_SECRET = ""
+# Server 
+PORT = 8080
 
 # Github
 GITHUB_CLIENT_ID = ""
 GITHUB_CLIENT_SECRET = ""
 GITHUB_CALLBACK_URL = ""
+
+#JWT
+JWT_SECRET = ""
+JWT_COOKIE_NAME = ""
+
+#Admin
+ADMIN_EMAIL = ""
+ADMIN_PASSWORD = ""
+
+PERSISTANCE = ""
+
+#Email
+EMAIL_SERVICE = ""
+EMAIL_PORT =
+EMAIL_USER = ""
+EMAIL_PASS = ""
+RESTORE_PASSWORD_TOKEN = ""
+RESTORE_PASSWORD_SECRET = ""
